tests/dataset/tpc-ds/compiler/c/q25.error
/tmp/TestCCompiler_TPCDS_Goldenq251167259774/001/prog.c: In function ‘test_TPCDS_Q25_aggregated_profit’:
/tmp/TestCCompiler_TPCDS_Goldenq251167259774/001/prog.c:357:20: error: incompatible types when initializing type ‘const char *’ using type ‘tmp_item_t’
  357 |                    (tmp_item_t){.i_item_id = "ITEM2",
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq251167259774/001/prog.c:366:58: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  366 |   if (test_TPCDS_Q25_aggregated_profit_result.len != tmp1.len) {
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq251167259774/001/prog.c:370:67: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  370 |       if (test_TPCDS_Q25_aggregated_profit_result.data[i3] != tmp1.data[i3]) {
      |                                                                   ^
      |                                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq251167259774/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq251167259774/001/prog.c:465:45: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  465 |   test_TPCDS_Q25_aggregated_profit_result = result;
      |                                             ^~~~~~
